Bug 1771252: Check GPUBuffer.mapAsync 'mode' argument against buffer's usage. r=nical

Differential Revision: https://phabricator.services.mozilla.com/D150529